complete implementation of socket

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ GOOGLE_CLIENT_SECRET=your_client_secret_here
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_TOKEN_ADDRESS=REDACTED_SECRET"
 NEXT_PUBLIC_CONTRACT_ADDRESS=REDACTED_SECRET"
+
+# -----------------------------------------------------------------------------
+# Chat Socket Address
+# -----------------------------------------------------------------------------
+NEXT_PUBLIC_CHAT_BACKEND="http://localhost:5000"
