--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "concurrently": "^8.2.2",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
